--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Rennovex</title>
         <link rel="stylesheet" href="styles/index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <nav class="navbar">
