navbar mobile version 1st version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Rennovex</title>
     <link rel="stylesheet" href="styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://kit.fontawesome.com/aa38e5fef7.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -11,13 +12,17 @@
         <a href="#">
       <img id="logo-img" src="img/logo.svg" alt="logo" /></a>
     </header>
-    
-      <ul class="nav-links">
+      <div class="openMenu"><i class="fas fa-bars"></i></div>
+      <ul class="mainMenu">
         <li><a href="#">HOME</a></li>
         <li><a href="#">PAGES</a></li>
         <li><a href="#">ABOUT</a></li>
         <li><a href="#">CONTACT</a></li>
-      </ul>
+      </ul> 
+      <div class="closeMenu"><i class="fas fa-times"></i></div>
+      <span class="icons">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-linkedin"></i></span>
       
     </nav>
     <div class="hero">
