--- a/index.html
+++ b/index.html
@@ -54,5 +54,5 @@
       </div>
      </div>
     </body>
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/JavaScript" src="scripts/index.js"></script>
 </html>
