--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/aa38e5fef7.js" crossorigin="anonymous"></script>
   </head>
   <body class="indexbody">
+    <script type="text/JavaScript" src="scripts/index.js"></script>
     <nav class="navbar" style="z-index: 4;">
       <header class="logo">
         <a href="#">
@@ -54,5 +55,5 @@
       </div>
      </div>
     </body>
-    <script type="text/JavaScript" src="scripts/index.js"></script>
+<!--     <script type="text/JavaScript" src="scripts/index.js"></script> -->
 </html>
